App changed to have 3 divs which all cycle through a different 5 messages when clicked. All work independantly

--- a/reactwithvite1/index.html
+++ b/reactwithvite1/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="root" id="root0"></div>
+    <div class="root" id="root1"></div>
+    <div class="root" id="root2"></div>
+    <div class="root" id="root3"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
